@@ -1,0 +1,1 @@
+mkdocs==1.4.3
